--- a/scss/variables-site/_colors.scss
+++ b/scss/variables-site/_colors.scss
@@ -15,7 +15,7 @@ $color-link-hover: #000;
 
 $color-link-title: #000;
 
-$color-border: #e6e6e6 !default;
+$color-border: rgba(68, 68, 68, 0.19) !default;
 
 $color-background-screen: #f1f1f1;
 $color-background-hr: #eee;
